Update README to mention scheduling feature

--- a/config.cfg
+++ b/config.cfg
@@ -1,9 +1,9 @@
 LOG_FILE=./bat.log
 APP_NAME="Battery alert"
-MIN_STATUS=15
-MAX_STATUS=100
-INTERVAL=60 # In seconds
+MIN_STATUS=15 # Integer, minimum percentage of battery
+MAX_STATUS=100 # Integer, maximum percentage of battery
+INTERVAL=60 # Integer, perform check up every # seconds
 NEXT_ALERT_TIME=0
-NOTIFICATION_DELAY_TIME=300
+NOTIFICATION_DELAY_TIME=300 # Integer, time in seconds for Battery alert to be quiet
 SCHEDULE_FILE=./schedule.csv
 
