Notification can be a sticky or a normal one

--- a/config.cfg
+++ b/config.cfg
@@ -3,6 +3,7 @@ APP_NAME="Battery alert"
 MIN_STATUS=15 # Integer, minimum percentage of battery
 MAX_STATUS=100 # Integer, maximum percentage of battery
 INTERVAL=60 # Integer, perform check up every # seconds
+NOTIFICATION_STICKY=false # Boolean, notification sticky or not
 NOTIFICATION_DELAY_TIME=300 # Integer, time in seconds for Battery alert to be quiet
 SCHEDULE_FILE=./schedule.csv
 
